--- a/package.json
+++ b/package.json
@@ -33,11 +33,13 @@
     "stream": "^0.0.2",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4",
-    "webfontloader": "^1.6.28"
+    "webfontloader": "^1.6.28",
+    "webpack": "^5.77.0"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "_commented_build": "react-scripts build",
+    "build": "webpack --config webpack.config.js",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -63,6 +65,7 @@
     "autoprefixer": "^10.4.13",
     "html-webpack-plugin": "^5.5.0",
     "postcss": "^8.4.19",
-    "tailwindcss": "^3.2.7"
+    "tailwindcss": "^3.2.7",
+    "webpack-cli": "^5.0.1"
   }
 }
